# voice-todo-float

./: .gitignore  CHANGELOG.md  README.md  package-lock.json  package.json
.github/workflows/: build-tauri.yml  build.yml
assets/: icon.icns
src/: app.js  index.html
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: main.rs
