[package]
name = "voice-todo-float"
version = "1.0.12"
description = "语音待办 - 桌面悬浮小部件"
authors = ["yang"]
edition = "2021"
rust-version = "1.77.0"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
which = "6"
glob = "0.3"
wait-timeout = "0.2"

[target.'cfg(target_os = "macos")'.dependencies]
objc2 = "0.6"

[features]
custom-protocol = ["tauri/custom-protocol"]
